# MaginvoxPrototype

./: .gitignore  CMakeLists.txt  preprocessorReflection.py  shell.nix
Libraries/: CMakeLists.txt
Source/: CMakeLists.txt  Main.cpp  Platform.h  PlatformDisplayServerXCB.cpp  PlatformLinux.cpp  PlatformLinux.h  PlatformWindow.h  PlatformWindowLinux.cpp  PlatformWindowLinux.h  RenderDevice.cpp  RenderDevice.h  Version.h  VulkanX11.h  Window.h  WindowX11.h
Source/Application/: CMakeLists.txt  Main.c
Source/Core/: CMakeLists.txt
Source/Core/Include/Core/: PrimTypes.h  Result.h
Source/Graphics/: CMakeLists.txt
Source/Graphics/Include/: RenderInterface.h
Source/Graphics/Source/: RenderInterface.c  RenderInterfaceVulkan.h
Source/Math/Include/Math/: Vector3i.h
Source/Vulkan/: RenderDevice.h
Source/Vulkan/Platform/: VulkanPlatformLinux.h
include/wae/core/: array.h  macro.h  primitive.h  reflect.h  result.h
include/wae/math/: matrix.h  quaternion.h  vector.cpp  vector.h
include/worldafter/core/: primitive.h
include/worldafter/math/: matrix.h  vector.cpp  vector.h  vector.inl
source/: CMakeLists.txt  main.c
source/Application/: CMakeLists.txt  Main.c
source/Core/: CMakeLists.txt
source/Core/Include/: PrimTypes.h
source/Graphics/: CMakeLists.txt
source/Graphics/Include/: RenderInterface.h
source/renderer/: gfx_device.h  renderer.h
